--- a/src/Hero.css
+++ b/src/Hero.css
@@ -1,11 +1,7 @@
 .playbill-hero {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     width: 100%;
-    height: 100%;
+    aspect-ratio: 2/3;
+    position: relative;
 }
 
 .hero-placeholder-image {
